[project]
name = "bioevents"
version = "0.1.0"
description = "A lightweight library for managing and manipulating time series events, with a focus on biosensing applications."
authors = [
    {name = "McGregor Joyner", email = "mcgsjoyner@gmail.com"},
]
dependencies = [
    "setuptools>=68.2.0",
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "pydantic>=2.1.1",
    "seaborn>=0.12.2",  # TODO: remove!
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT license"}
keywords = [
    "bioevents",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/mcgsjoyner/bioevents"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
dev = [
    "pip==19.2.3",
    "tox-pdm>=0.7.0",
    "pdm-bump>=0.7.0",
    "wheel==0.33.6",
    "watchdog==0.9.0",
    "flake8==3.7.8",
    "coverage==4.5.4",
    "Sphinx==1.8.5",
    "twine==1.14.0",
    "black>=21.7b0",
    "pre-commit>=3.4.0",
]
notebook = [
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 99
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''
