[project]
name = "bioevents"
version = "0.1.1rc3"
description = "A lightweight library for managing and manipulating time series events, with a focus on biosensing applications."
authors = [
    { name = "McGregor Joyner", email = "mcgsjoyner@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.rst"
keywords = [
    "bioevents",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "setuptools>=68.2.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.0",
    "pandas~=1.3.5",
    "pydantic~=1.10.2",
    "seaborn>=0.12.2",
]

[project.license]
text = "MIT license"

[project.urls]
Homepage = "https://github.com/mcgsjoyner/bioevents"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project.optional-dependencies]
notebooks = ["jupyter>=1.0.0"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
dev = [
    "pip>=19.2.3",
    "pip-tools>=7.0",
    "tox-pdm>=0.7.0",
    "pdm-bump>=0.7.0",
    "wheel>=0.33.6",
    "watchdog>=0.9.0",
    "flake8>=3.7.8",
    "coverage>=4.5.4",
    "twine>=1.14.0",
    "black>=21.7b0",
    "pre-commit>=3.4.0",
]
doc = [
    "Sphinx",
    "myst_nb",
    "sphinx-rtd-theme"
]

[tool.black]
line-length = 99
target-version = [
    "py39",
    "py310",
    "py311",
]
include = "\\.pyi?$"
exclude = "/(\n  \\.toml\n  |\\.sh\n  |\\.git\n  |\\.ini\n  |Dockerfile\n  |Jenkinfile\n)/\n"
